# alphafold-sovereign-mcp

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .zenodo.json  404.html  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  INCIDENT_RESPONSE.md  LICENSE  LICENSE-COMMERCIAL.md  LIMITATIONS.md  NOTICE  PATENTS.md  PHASE1_BUGFIX.py  PRIVACY.md  README.md  REVIEWER.md  SECURITY.md  STATUS.md  SUPPORT.md  TRADEMARKS.md  commit_fix.bat  commit_pr2.bat  config.example.json  git_commit.bat  git_commit_v2.bat  git_init.bat  glama.json  index.html  llms-install.md  mkdocs.yml  mutmut_config.py  (+12 more)
.clusterfuzzlite/: Dockerfile  build.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  limitation.md
.github/workflows/: cflite_batch.yml  cflite_pr.yml  ci.yml  dependabot-auto-merge.yml  docs.yml  release-please.yml  release.yml  scorecard.yml
.well-known/: mcp.json  security.txt
_archive/: qa_test_phase1.py
_archive/legacy/: README.md  alphafold_mcp.py  cache.py  core.py  features.py  fetcher.py  parsers.py  topology.py
architecture/: index.html
audit/: index.html
benchmarks/: MANIFEST.txt  README.md  prompts.jsonl  run.py  verify.py
benchmarks/results/: .gitkeep
changelog/: index.html
code-of-conduct/: index.html
contributing/: index.html
docs/: architecture.md  audit.md  index.html  index.md  installation.md  limitations.md  privacy.md  status.md  threat-model.md
docs/examples/: 01-variant-triage.md  02-target-characterization.md  03-drug-discovery.md  golden.md  index.md
docs/quality/: mutation-scores.md
docs/tools/: disease.md  index.md  knowledge-graph.md  precision-medicine.md  structure-intelligence.md
examples/: README.md  index.html
examples/01-variant-triage/: README.md  index.html  transcript.jsonl
examples/02-target-characterization/: README.md  index.html  transcript.jsonl
examples/03-drug-discovery/: README.md  index.html  transcript.jsonl
examples/golden/: README.md  index.html
examples/golden/01-brca1-c5266dup/: README.md  cassette.json  expected.json
examples/golden/02-tp53-r175h/: README.md  cassette.json  expected.json
examples/golden/03-egfr-l858r/: README.md  cassette.json  expected.json
fuzz/: fuzz_domain.py
governance/: index.html
installation/: index.html
limitations/: index.html
privacy/: index.html
quality/mutation-scores/: index.html
scripts/: record_golden_examples.py  replicate.sh  version_coherence.py
search/: search_index.json
security/: index.html
src/alphafold_sovereign/: __init__.py  __main__.py  alphafold_mcp.py  cache.py  core.py  features.py  fetcher.py  parsers.py  topology.py
src/alphafold_sovereign/clients/: _base.py  alphafold.py  chembl.py  clinvar.py  disgenet.py  ensembl.py  gnomad.py  hpo.py  mondo.py  opentargets.py
src/alphafold_sovereign/domain/: disease.py  druggability.py
src/alphafold_sovereign/server/: app.py  stdio.py
src/alphafold_sovereign/storage/: knowledge_graph.py  seed.py
src/alphafold_sovereign/tools/: disease.py  knowledge_graph_tools.py  precision_medicine.py  structure_intelligence.py
status/: index.html
support/: index.html
tests/: __init__.py  conftest.py  test_base_client.py  test_base_client_full.py  test_benchmark_verify.py  test_client_alphafold.py  test_client_chembl.py  test_client_clinvar.py  test_client_disgenet.py  test_client_ensembl.py  test_client_gnomad.py  test_client_hpo.py  test_client_mondo.py  test_client_opentargets.py  test_connector.py  test_domain.py  test_domain_druggability.py  test_knowledge_graph.py  test_knowledge_graph_connection.py  test_main.py  test_mcp.py  test_metadata_contracts.py  test_server_stdio.py  test_tool_disease.py  test_tool_knowledge_graph_tools.py  test_tool_precision_medicine.py  test_tool_structure_intelligence.py  verify_config.py
tests/golden/: _cassette.py  test_golden_examples.py
threat-model/: index.html
tools/: index.html
tools/disease/: index.html
tools/knowledge-graph/: index.html
tools/precision-medicine/: index.html
tools/structure-intelligence/: index.html
