[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphafold-sovereign-mcp"
version = "1.0.0"
description = "Sovereign AlphaFold MCP Server - Hybrid local/online protein structure access with topological analysis"
readme = "README.md"
license = {text = "Proprietary - TOPOLOGICA LLC"}
requires-python = ">=3.10"
authors = [
    {name = "Santiago Maniches", email = "santiago@topologica.ai"}
]
keywords = [
    "alphafold",
    "protein-structure",
    "mcp",
    "model-context-protocol",
    "bioinformatics",
    "structural-biology",
    "persistent-homology",
    "topological-data-analysis"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Typing :: Typed"
]

dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://topologica.ai"
Repository = "https://github.com/smaniches/alphafold-sovereign-mcp"
Documentation = "https://github.com/smaniches/alphafold-sovereign-mcp#readme"

[project.scripts]
alphafold-sovereign = "alphafold_sovereign.alphafold_mcp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
